# agentic_ai_researcher

./: README.md  ai_researcher.py  ai_researcher_2.py  arxive_tool.py  frontend.py  pyproject.toml  read_pdf.py  write_pdf.py
image/: Architecture_Diagram.drawio
